--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-flash-attn==2.5.9
+flash-attn==2.5.8
 protobuf==5.27.0
 sentencepiece==0.2.0
 peft==0.11.1
@@ -15,3 +15,4 @@ PyYAML==6.0.1
 tqdm==4.66.1
 transformers==4.41.1
 fastapi==0.111.0
+pydantic
