Integration with FastAPI

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,17 @@ services:
     ports:
       - "31000:31000"
     network_mode: host
+    environment:
+      PROXY: ${PROXY}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+    volumes:
+      - ../qa/finetuned-e5-base-folds_v3:/app/rag/finetuned-e5-base-folds_v3
+      - ../qa/e5-base-tokenizer:/app/rag/e5-base-tokenizer
+
     deploy:
       resources:
         reservations:
           devices:
             - driver: nvidia
-              count: 2
+              count: 1
               capabilities: [gpu]
