Pre-pool of Sasha's branch

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,15 +3,13 @@ version: "3"
 services:
   qna:
     build: .
-    ports:
-      - "31000:31000"
     network_mode: host
     environment:
       PROXY: ${PROXY}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
     volumes:
-      - ../qa/finetuned-e5-base-folds_v3:/app/rag/finetuned-e5-base-folds_v3
-      - ../qa/e5-base-tokenizer:/app/rag/e5-base-tokenizer
+      - /home/alex/Code/tinkoff-rag/trained_models:/app/rag/finetuned-e5-base-folds_v3
+      - /home/alex/Code/tinkoff-rag/tokenizer:/app/rag/e5-base-tokenizer
 
     deploy:
       resources:
