--- a/retriever/configs/default.yaml
+++ b/retriever/configs/default.yaml
@@ -50,6 +50,7 @@ model:
   _convert_: all
   pretrained_model_name_or_path: "intfloat/multilingual-e5-base"
   add_pooling_layer: false
+  attn_implementation: flash_attention_2
 
 train:
   all_folds: true
