--- a/rag/config.yaml
+++ b/rag/config.yaml
@@ -3,9 +3,9 @@ RETRIEVAL_MODEL_PATHS:
     # - 'intfloat/multilingual-e5-large-instruct'
     # - 'intfloat/multilingual-e5-base'
     - 'finetuned-e5-base-folds_v3/0'
-    # - 'finetuned-e5-base-folds_v2/1'
-    # - 'finetuned-e5-base-folds_v2/2'
-    # - 'finetuned-e5-base-folds_v2/3'
-    # - 'finetuned-e5-base-folds_v2/4'
+    - 'finetuned-e5-base-folds_v3/1'
+    - 'finetuned-e5-base-folds_v3/2'
+    - 'finetuned-e5-base-folds_v3/3'
+    - 'finetuned-e5-base-folds_v3/4'
 TOKENIZER_PATH: 'e5-base-tokenizer'
 # TOKENIZER_PATH: 'intfloat/multilingual-e5-large-instruct'
